fixed spacing issues for the primary sidebar

--- a/docs/styles/extra.css
+++ b/docs/styles/extra.css
@@ -1,12 +1,12 @@
 .md-sidebar--primary {
-  width: 440px; 
-  margin-left: -15%;
+  width: 380px; 
+  margin-left: -10%;
 }
 
 
 
 .md-nav--primary {
-  width: 420px;
+  width: 360px;
 }
 
 
